--- a/resources/frontend/angular/src/index.html
+++ b/resources/frontend/angular/src/index.html
@@ -25,7 +25,7 @@
       position: absolute;
       top: 0;
       bottom: 0;
-      left: 0:
+      left: 0;
       right: 0;
       width: 100%;
       height: 100%;
